--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "an API to create question, delete a question, add and delete a options, add votes to existing option",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/prashantsingh896/Polling-System-API#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^6.8.4",
     "nodemon": "^2.0.20"
   }
 }
