--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/prashantsingh896/Polling-System-API#readme",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mongoose": "^6.8.4",
+    "mongoose-sequence": "^5.3.1",
     "nodemon": "^2.0.20"
   }
 }
